Deps: Upgrade `styled-components`.

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "sass": "1.64.1",
         "sharp": "0.32.4",
         "slick-carousel": "1.8.1",
-        "styled-components": "5.3.11",
+        "styled-components": "6.0.5",
+        "stylis": "4.3.0",
         "swr": "2.2.0",
         "typescript": "5.1.6",
         "use-query-params": "2.2.1",
@@ -78,7 +79,6 @@
         "@types/enzyme": "3.10.13",
         "@types/node": "18.17.0",
         "@types/react": "18.2.16",
-        "@types/styled-components": "5.1.26",
         "enzyme": "3.11.0",
         "eslint": "8.45.0",
         "eslint-config-next": "13.4.12",
