--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "@apollo/client": "3.7.17",
+        "@emotion/is-prop-valid": "1.2.1",
         "@prismicio/client": "7.1.0",
         "@prismicio/helpers": "2.3.9",
         "@prismicio/next": "1.3.3",
