--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ],
     "scripts": {
         "dev": "npm run hack && next dev",
-        "build": "npm run hack && next build",
+        "build": "npm run hack && NODE_OPTIONS='--no-experimental-fetch' next build",
         "postbuild": "npm run sitemap",
         "sitemap": "next-sitemap && npm run sitemap:pretty",
         "sitemap:pretty": "for i in public/*.xml; do cat $i | pretty-xml | tee $i > /dev/null; done",
