i18n: Initial support for translating static strings.
This adds translations for a few strings in both Germand and Swedish.
The `header` string are unused at the moment as we need to refactor the
way we render that to support translations.

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+I18NEXT_DEFAULT_CONFIG_PATH=./next-i18next.config.cjs
 DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
