--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
         "graphql": "16.7.1",
+        "i18next": "23.4.1",
         "next": "13.4.12",
+        "next-i18next": "14.0.0",
         "next-query-params": "4.2.3",
         "next-seo": "6.1.0",
         "node-html-parser": "6.1.5",
@@ -53,6 +55,7 @@
         "react": "18.2.0",
         "react-context-hook": "github:sweet-side-of-sweden/react-context-hook",
         "react-dom": "18.2.0",
+        "react-i18next": "13.0.3",
         "react-icons": "4.10.1",
         "react-rating-stars-component": "2.2.0",
         "react-shopify-analytics": "1.1.0",
