--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
 STORE_LOCALES=en-US
+STORE_DEFAULT_LOCALE=en-US
 STORE_CURRENCIES=USD,EUR
 GTM=GTM-KGVH3RX
 WEBHOOK_REVALIDATE=AB5stBgmqQ4jkRvG2hOY2Ut-3ZV2UkN5Wg
