--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
         "i18next": "23.4.1",
         "next": "13.4.12",
         "next-i18next": "14.0.0",
-        "next-query-params": "4.2.3",
         "next-seo": "6.1.0",
         "node-html-parser": "6.1.5",
         "nprogress": "0.2.0",
@@ -66,8 +65,7 @@
         "styled-components": "6.0.6",
         "stylis": "4.3.0",
         "swr": "2.2.0",
-        "typescript": "5.1.6",
-        "use-query-params": "2.2.1"
+        "typescript": "5.1.6"
     },
     "devDependencies": {
         "@slicemachine/adapter-next": "0.3.9",
