--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@ SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
-NEXT_PUBLIC_SENTRY_DSN=https://68464611058c4deab7022f9fec1134cc@o4505269537931264.ingest.sentry.io/4505269537931264
+NEXT_PUBLIC_SENTRY_DSN=https://68464611058c4deab7022f9fec1134cc@o4505269537931264.ingest.sentry.io/4505269537931264%0AUpdated%201d%20ago%0A%0A
 STORE_LOCALES=en-US,de-DE,sv-SE
 STORE_DEFAULT_LOCALE=en-US
 STORE_CURRENCIES=USD,EUR
