--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -9,13 +9,12 @@ on:
 
 defaults:
     run:
-        # change this if your nextjs app does not live at the root of the repo
         working-directory: ./
 
 permissions:
-    contents: read # for checkout repository
-    actions: read # for fetching base branch bundle stats
-    pull-requests: write # for comments
+    contents: read
+    actions: read
+    pull-requests: write
 
 jobs:
     analyze:
@@ -35,6 +34,8 @@ jobs:
 
             - name: Install dependencies
               uses: bahmutov/npm-install@v1
+              with:
+                  install-command: npm ci
 
             - name: Restore next build
               uses: actions/cache@v3
@@ -42,18 +43,12 @@ jobs:
               env:
                   cache-name: cache-next-build
               with:
-                  # if you use a custom build directory, replace all instances of `.next` in this file with your build directory
-                  # ex: if your app builds to `dist`, replace `.next` with `dist`
                   path: .next/cache
-                  # change this if you prefer a more strict cache
                   key: ${{ runner.os }}-build-${{ env.cache-name }}
 
             - name: Build next.js app
-              # change this if your site requires a custom build command
-              run: ./node_modules/.bin/next build
+              run: npm run build
 
-            # Here's the first place where next-bundle-analysis' own script is used
-            # This step pulls the raw bundle stats for the current bundle
             - name: Analyze bundle
               run: npx -p nextjs-bundle-analysis report
 
@@ -71,19 +66,6 @@ jobs:
                   branch: ${{ github.event.pull_request.base.ref }}
                   path: .next/analyze/base
 
-            # And here's the second place - this runs after we have both the current and
-            # base branch bundle stats, and will compare them to determine what changed.
-            # There are two configurable arguments that come from package.json:
-            #
-            # - budget: optional, set a budget (bytes) against which size changes are measured
-            #           it's set to 350kb here by default, as informed by the following piece:
-            #           https://infrequently.org/2021/03/the-performance-inequality-gap/
-            #
-            # - red-status-percentage: sets the percent size increase where you get a red
-            #                          status indicator, defaults to 20%
-            #
-            # Either of these arguments can be changed or removed by editing the `nextBundleAnalysis`
-            # entry in your package.json file.
             - name: Compare with base branch bundle
               if: success() && github.event.number
               run: ls -laR .next/analyze/base && npx -p nextjs-bundle-analysis compare
