--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
         "@types/convert-units": "2.3.7",
         "@types/enzyme": "3.10.14",
         "@types/node": "18.18.5",
+        "@types/nprogress": "0.2.1",
         "@types/react": "18.2.25",
+        "@types/styled-components": "5.1.28",
         "babel-plugin-module-resolver": "5.0.0",
         "encoding": "0.1.13",
         "enzyme": "3.11.0",
