Meta: Start migration to using the `src` folder.
This is step 1 of many before we can properly adopt the `app router`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
             "@/hooks/*": ["src/hooks/*"],
             "@/api/*": ["src/api/*"],
             "@/utils/*": ["src/utils/*"],
-            "@/style/*": ["src/style/*"]
+            "@/style/*": ["src/scss/*"]
         }
     },
     "exclude": ["dist", "node_modules", "out", "public", ".next", "next.config.mjs"],
