Prismic+API: Migrate to the `src` folder.
A few things are still living outside of the src folder.

--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,6 +1,6 @@
 {
     "adapter": "@slicemachine/adapter-next",
-    "libraries": ["./slices", "./slices-product"],
+    "libraries": ["./src/slices"],
     "localSliceSimulatorURL": "http://localhost:3000/slice-simulator",
     "repositoryName": "candy-by-sweden"
 }
