Prismic: Remove `PrismicPreview`.
As I am the only one manging content at the moment it's not worth the
performance and bundle-size trade-off.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "removeComments": false,
         "jsx": "preserve",
         "incremental": true,
-        "downlevelIteration": true,
+        "downlevelIteration": false,
         "plugins": [
             {
                 "name": "next"
