CI+Hooks: Add linting to CI and add lint+test hook.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
             - name: 📦 Download dependencies
               run: npm ci
 
+            - name: 🧪 Lint
+              run: npm run test
+
             - name: 🧪 Test
               run: npm run test
 
