--- a/package.json
+++ b/package.json
@@ -12,23 +12,42 @@
         ".next/cache"
     ],
     "scripts": {
+        "prepare": "husky install",
         "dev": "next dev",
         "build": "next build",
         "postbuild": "npm run sitemap",
         "sitemap": "next-sitemap && npm run sitemap:pretty",
         "sitemap:pretty": "for i in public/*.xml; do cat $i | pretty-xml | tee $i > /dev/null; done",
         "start": "next start -p $PORT",
-        "lint": "next lint",
+        "lint": "npm-run-all --parallel lint:**",
+        "lint:next": "next lint",
+        "lint:prettier": "prettier src/**/*.* --check",
+        "lint:types": "tsc --project tsconfig.json -noEmit",
         "test": "npm-run-all test:*",
         "test:jest": "jest --coverage",
         "watch:test": "jest --watch",
         "format": "npm-run-all prettier:format:*",
-        "prettier": "prettier src/**/*.* --check",
-        "prettier:format:src": "prettier src/**/*.* --write",
-        "prettier:format:pages": "prettier pages/**/*.* --write",
-        "prettier:format:app": "prettier app/**/*.* --write",
         "slicemachine": "start-slicemachine"
     },
+    "author": {
+        "name": "Nordcom Group Inc.",
+        "email": "opensource@nordcom.io",
+        "url": "https://nordcom.io/"
+    },
+    "contributors": [
+        {
+            "name": "Filiph Siitam Sandström",
+            "email": "filiph@nordcom.io",
+            "url": "https://github.com/filiphsps/"
+        }
+    ],
+    "homepage": "https://www.sweetsideofsweden.com/",
+    "browserslist": [
+        ">0.3%",
+        "defaults",
+        "supports es6-module",
+        "supports css-grid"
+    ],
     "dependencies": {
         "@apollo/client": "3.8.5",
         "@prismicio/client": "7.3.1",
@@ -48,7 +67,6 @@
         "next-seo": "6.1.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
-        "react-context-hook": "github:sweet-side-of-sweden/react-context-hook",
         "react-dom": "18.2.0",
         "react-i18next": "13.3.0",
         "react-icons": "4.11.0",
@@ -67,18 +85,21 @@
         "@types/color": "3.0.4",
         "@types/convert-units": "2.3.7",
         "@types/enzyme": "3.10.14",
+        "@types/jest": "29.5.5",
         "@types/node": "18.18.5",
         "@types/nprogress": "0.2.1",
         "@types/react": "18.2.28",
         "@types/styled-components": "5.1.28",
         "babel-plugin-module-resolver": "5.0.0",
-        "encoding": "0.1.13",
         "enzyme": "3.11.0",
         "eslint": "8.51.0",
         "eslint-config-next": "13.5.5",
         "eslint-config-prettier": "9.0.0",
+        "eslint-plugin-unused-imports": "3.0.0",
+        "husky": "8.0.3",
         "jest": "29.7.0",
         "jest-environment-jsdom": "29.7.0",
+        "lint-staged": "15.0.1",
         "next-sitemap": "4.2.3",
         "npm-run-all": "4.1.5",
         "prettier": "3.0.3",
