--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
         "sass": "1.69.3",
         "sharp": "0.32.6",
         "styled-components": "6.1.0",
-        "swr": "2.2.4",
-        "typescript": "5.2.2"
+        "swr": "2.2.4"
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
@@ -96,6 +95,7 @@
         "@types/node": "18.18.5",
         "@types/nprogress": "0.2.1",
         "@types/react": "18.2.28",
+        "@types/react-dom": "18.2.13",
         "@types/styled-components": "5.1.28",
         "babel-plugin-module-resolver": "5.0.0",
         "eslint": "8.51.0",
@@ -110,7 +110,8 @@
         "npm-run-all": "4.1.5",
         "prettier": "3.0.3",
         "pretty-xml": "1.2.1",
-        "slice-machine-ui": "1.17.0"
+        "slice-machine-ui": "1.17.0",
+        "typescript": "5.2.2"
     },
     "nextBundleAnalysis": {
         "budget": 248400,
