--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "@types/nprogress": "0.2.1",
         "@types/react": "18.2.28",
         "@types/react-dom": "18.2.13",
+        "@types/react-slick": "0.23.10",
         "@types/styled-components": "5.1.28",
         "babel-plugin-module-resolver": "5.0.0",
         "eslint": "8.51.0",
