--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,18 +24,18 @@
         "strictNullChecks": true,
         "baseUrl": ".",
         "paths": {
-            "@/components/*": ["src/components/*"],
-            "@/hooks/*": ["src/hooks/*"],
-            "@/api/*": ["src/api/*"],
-            "@/models/*": ["src/models/*"],
-            "@/utils/*": ["src/util/*"],
-            "@/style/*": ["src/scss/*"],
+            "@/components/*": ["./src/components/*"],
+            "@/hooks/*": ["./src/hooks/*"],
+            "@/api/*": ["./src/api/*"],
+            "@/models/*": ["./src/models/*"],
+            "@/utils/*": ["./src/util/*"],
+            "@/style/*": ["./src/scss/*"],
 
             // Prismic
-            "@/slices/*": ["src/slices/*"],
-            "@/slices": ["src/slices/index"],
-            "@/prismic/types": ["prismicio-types"],
-            "@/prismic": ["prismicio"]
+            "@/slices/*": ["./src/slices/*"],
+            "@/slices": ["./src/slices/index"],
+            "@/prismic/types": ["./prismicio-types.d.ts"],
+            "@/prismic": ["./prismicio.ts"]
         }
     },
     "exclude": ["node_modules", "public"],
