--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,9 @@
 I18NEXT_DEFAULT_CONFIG_PATH=./next-i18next.config.cjs
 DOMAIN=www.sweetsideofsweden.com
+SHOPIFY_SHOP_ID=76188483889
+SHOPIFY_STOREFRONT_ID=2130225
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
+SHOPIFY_CHECKOUT_DOMAIN=checkout.sweetsideofsweden.com
 SHOPIFY_TOKEN=4991548da2a9d3dcc6dff9e2e4154b16
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
