--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     ],
     "dependencies": {
         "@apollo/client": "3.8.6",
+        "@linaria/core": "5.0.2",
+        "@linaria/react": "5.0.3",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.3.6",
         "@prismicio/react": "2.7.3",
@@ -72,8 +74,10 @@
         "destyle.css": "4.0.0",
         "i18next": "23.5.1",
         "next": "13.5.5",
+        "next-compose-plugins": "2.2.1",
         "next-i18next": "14.0.3",
         "next-seo": "6.1.0",
+        "next-with-linaria": "0.6.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -82,10 +86,10 @@
         "react-slick": "0.29.0",
         "sass": "1.69.3",
         "sharp": "0.32.6",
-        "styled-components": "6.1.0",
         "swr": "2.2.4"
     },
     "devDependencies": {
+        "@linaria/babel-preset": "5.0.3",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.20",
         "@types/accept-language-parser": "1.5.4",
