--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,12 @@
 name: 🧠 CI
 
 on:
+    pull_request:
+        paths-ignore:
+            - '**.md'
     push:
+        branches:
+            - master
         paths-ignore:
             - '**.md'
 
