i18n: Initial support for i18n.
This completely resolves NOR-30.

--- a/package.json
+++ b/package.json
@@ -69,14 +69,11 @@
         "color": "4.2.3",
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
-        "i18next": "23.6.0",
         "next": "13.5.6",
-        "next-i18next": "14.0.3",
         "next-seo": "6.4.0",
         "nprogress": "0.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-i18next": "13.3.1",
         "react-icons": "4.11.0",
         "react-slick": "0.29.0",
         "sass": "1.69.5",
@@ -112,6 +109,7 @@
         "npm-run-all": "4.1.5",
         "prettier": "3.0.3",
         "pretty-xml": "1.2.1",
+        "server-only": "0.0.1",
         "slice-machine-ui": "1.19.1",
         "typescript": "5.2.2"
     },
