--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,7 @@ SHOPIFY_CHECKOUT_DOMAIN=checkout.sweetsideofsweden.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
-STORE_LOCALES=en-US
+STORE_LOCALES=en-US,en-GB,de-DE
 STORE_DEFAULT_LOCALE=en-US
 STORE_CURRENCIES=USD,EUR
 GTM=GTM-KGVH3RX
