CI: Add proper UI testing :rocket:.
This resolves FRO-25.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,7 @@
         "prismicio-types.d.ts",
         "./src/@types",
         "./src/**/*.ts",
-        "./src/**/*.tsx"
+        "./src/**/*.tsx",
+        "./jest-setup.ts"
     ]
 }
