--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "lint:prettier": "prettier src/**/*.* --check",
         "lint:types": "tsc --project tsconfig.json -noEmit",
         "test": "npm-run-all --parallel test:*",
-        "test:jest": "jest --config jest.config.cjs",
+        "test:jest": "jest --config jest.config.ts --coverage",
         "slicemachine": "start-slicemachine"
     },
     "author": {
@@ -84,6 +84,8 @@
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.23",
+        "@testing-library/jest-dom": "6.1.4",
+        "@testing-library/react": "14.0.0",
         "@types/accept-language-parser": "1.5.5",
         "@types/color": "3.0.5",
         "@types/convert-units": "2.3.8",
@@ -104,6 +106,7 @@
         "husky": "8.0.3",
         "jest": "29.7.0",
         "jest-environment-jsdom": "29.7.0",
+        "jsdom": "22.1.0",
         "lint-staged": "15.0.2",
         "next-sitemap": "4.2.3",
         "npm-run-all": "4.1.5",
@@ -111,6 +114,7 @@
         "pretty-xml": "1.2.1",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.19.1",
+        "ts-node": "10.9.1",
         "typescript": "5.2.2"
     },
     "nextBundleAnalysis": {
