--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,24 @@
+# General Config
 DOMAIN=www.sweetsideofsweden.com
+EDGE_CONFIG="https://edge-config.vercel.com/ecfg_kxjh04qdfa89bvaze5ergwxlvoly?token=a9c0e625-69e1-4ac3-b829-8460a1eda713"
+
+# Store Config
+STORE_LOCALES=en-US,de-DE,sv-SE,en-GB
+STORE_DEFAULT_LOCALE=en-US
+STORE_CURRENCIES=USD,EUR
+WEBHOOK_REVALIDATE=
+
+# Shopify
 SHOPIFY_SHOP_ID=76188483889
 SHOPIFY_STOREFRONT_ID=2130225
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_CHECKOUT_DOMAIN=checkout.sweetsideofsweden.com
 SHOPIFY_TOKEN=4991548da2a9d3dcc6dff9e2e4154b16
+SHOPIFY_PRIVATE_TOKEN=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
+
+# Prismic
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
-STORE_LOCALES=en-US,de-DE,sv-SE,en-GB
-STORE_DEFAULT_LOCALE=en-US
-STORE_CURRENCIES=USD,EUR
+
+# SEO & Analytics
 GTM=
-WEBHOOK_REVALIDATE=
