--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.0",
         "@thebeyondgroup/shopify-rich-text-renderer": "1.0.0",
+        "@vercel/edge-config": "0.4.1",
         "accept-language-parser": "1.5.0",
         "color": "4.2.3",
         "convert-units": "2.3.4",
