--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://json.schemastore.org/eslintrc.json",
     "extends": ["next/core-web-vitals", "prettier"],
-    "plugins": ["unused-imports"],
+    "plugins": ["unused-imports", "eslint-plugin-jsdoc"],
     "rules": {
         "consistent-return": "error",
         "no-mixed-operators": 0,
@@ -31,6 +31,8 @@
         "unused-imports/no-unused-vars": [
             "warn",
             { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
-        ]
+        ],
+        "jsdoc/require-hyphen-before-param-description": "error",
+        "jsdoc/check-types": "error"
     }
 }
