--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
                 "name": "next"
             }
         ],
+        "types": ["vitest/globals", "@testing-library/jest-dom"],
         "target": "ESNext",
         "lib": ["dom", "dom.iterable", "ESNext"],
         "allowJs": true,
@@ -51,7 +52,6 @@
         "prismicio-types.d.ts",
         "./src/@types",
         "./src/**/*.ts",
-        "./src/**/*.tsx",
-        "./jest-setup.ts"
+        "./src/**/*.tsx"
     ]
 }
