--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "engines": {
         "npm": ">=8",
-        "node": ">=18 <=20"
+        "node": ">=18 <=21"
     },
     "cacheDirectories": [
         ".next/cache"
@@ -25,7 +25,7 @@
         "lint:prettier": "prettier src/**/*.* --check",
         "lint:types": "tsc --project tsconfig.json -noEmit",
         "test": "npm-run-all --parallel test:*",
-        "test:jest": "jest --config jest.config.ts --coverage",
+        "test:vitest": "vitest run --coverage",
         "slicemachine": "start-slicemachine"
     },
     "author": {
@@ -91,13 +91,14 @@
         "@types/accept-language-parser": "1.5.5",
         "@types/color": "3.0.5",
         "@types/convert-units": "2.3.8",
-        "@types/jest": "29.5.7",
         "@types/node": "20.8.10",
         "@types/nprogress": "0.2.2",
         "@types/react": "18.2.33",
         "@types/react-dom": "18.2.14",
         "@types/react-slick": "0.23.11",
         "@types/styled-components": "5.1.29",
+        "@vitejs/plugin-react": "4.1.0",
+        "@vitest/coverage-v8": "0.34.6",
         "babel-plugin-module-resolver": "5.0.0",
         "eslint": "8.52.0",
         "eslint-config-next": "13.5.6",
@@ -107,8 +108,6 @@
         "graphql": "16.8.1",
         "gzip-size": "6.0.0",
         "husky": "8.0.3",
-        "jest": "29.7.0",
-        "jest-environment-jsdom": "29.7.0",
         "jsdom": "22.1.0",
         "lint-staged": "15.0.2",
         "next-sitemap": "4.2.3",
@@ -117,8 +116,8 @@
         "pretty-xml": "1.2.1",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.19.1",
-        "ts-node": "10.9.1",
-        "typescript": "5.2.2"
+        "typescript": "5.2.2",
+        "vitest": "0.34.6"
     },
     "nextBundleAnalysis": {
         "budget": 248400,
