--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
         "postbuild": "npm run sitemap",
         "sitemap": "next-sitemap",
         "postsitemap": "for i in public/*.xml; do cat $i | pretty-xml | tee $i > /dev/null; done",
-        "lint": "npm-run-all --parallel lint:**",
+        "lint": "concurrently --raw npm:lint:*",
         "lint:next": "next lint",
         "lint:prettier": "prettier src/**/*.* --check",
         "lint:types": "tsc --project tsconfig.json -noEmit",
-        "test": "npm-run-all --parallel test:*",
+        "test": "concurrently --raw npm:test:*",
         "test:vitest": "vitest run --coverage",
         "slicemachine": "start-slicemachine"
     },
@@ -100,6 +100,7 @@
         "@vitejs/plugin-react": "4.1.0",
         "@vitest/coverage-v8": "0.34.6",
         "babel-plugin-module-resolver": "5.0.0",
+        "concurrently": "8.2.2",
         "eslint": "8.52.0",
         "eslint-config-next": "13.5.6",
         "eslint-config-prettier": "9.0.0",
@@ -111,7 +112,6 @@
         "jsdom": "22.1.0",
         "lint-staged": "15.0.2",
         "next-sitemap": "4.2.3",
-        "npm-run-all": "4.1.5",
         "prettier": "3.0.3",
         "pretty-xml": "1.2.1",
         "server-only": "0.0.1",
