--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://json.schemastore.org/eslintrc.json",
     "extends": ["next/core-web-vitals", "prettier"],
     "plugins": ["unused-imports"],
     "rules": {
