CI: Automatically cancel Vercel builds.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
+    "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
     "trailingSlash": true,
     "framework": "nextjs",
     "github": {
-        "enabled": true
+        "enabled": true,
+        "autoJobCancelation": true
     }
 }
