Layout: Fix canonical URL.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,38 @@
 {
     "typescript.tsdk": "node_modules/typescript/lib",
-    "typescript.enablePromptUseWorkspaceTsdk": true,
+    "typescript.locale": "en",
+    "typescript.surveys.enabled": false,
+    "git.autofetch": "all",
+    "git.countBadge": "tracked",
+    "git.fetchOnPull": true,
+    "git.inputValidationSubjectLength": 72,
+    "git.inputValidationLength": 72,
+    "git.inputValidation": "always",
+    "git.showPushSuccessNotification": true,
+    "github.copilot.enable": {
+        "plaintext": "true",
+        "markdown": "true"
+    },
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.organizeImports": true,
         "source.sortMembers": true
+    },
+    "files.associations": {
+        "**/*.hbs": "plaintext",
+        "LICENSE": "plaintext",
+        ".eslintrc": "json",
+        ".renovaterc": "json"
+    },
+    "[plaintext]": {
+        "editor.formatOnSave": false
+    },
+    "[git-commit]": {
+        "editor.rulers": [72],
+        "editor.wordWrap": "off",
+        "workbench.editor.restoreViewState": false
     },
     "files.exclude": {
         "**/.git": true,
