Locale: Handle missing locale.
This commits redirects the user to the locale configured as the default
and therefore resolves FRO-45 entirely.

FIXME: It does not yet account for the user's location nor his/her
browser preferred language. That is an urgent TODO before release.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,8 @@
         "**/next-env.d.ts": true,
         "**/prismicio-types.d.ts": true,
         "**/*.tsbuildinfo": true
-    }
+    },
+    "files.autoSave": "onFocusChange",
+    "git.enableCommitSigning": true,
+    "git.mergeEditor": true
 }
