Lint: Improve ESLint configuration.
- Rename `.eslintrc.json` to `.eslintrc` to make it easier to find.
- Add `eslint-plugin-import` to the ESLint configuration.
    The purpose of this plugin is to help with linting of import
    statements.
- Add `@typescript-eslint/eslint-plugin` to the ESLint configuration.
    The purpose of this plugin is to help with linting of TypeScript
    code and to use the "consistent-type-imports" rule specifically.
- Add `jsx-a11y` to the ESLint configuration.
    This is to make sure we follow best practices.

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "@types/react-dom": "18.2.14",
         "@types/react-slick": "0.23.11",
         "@types/styled-components": "5.1.29",
+        "@typescript-eslint/eslint-plugin": "6.9.1",
         "@vitejs/plugin-react": "4.1.0",
         "@vitest/coverage-v8": "0.34.6",
         "babel-plugin-module-resolver": "5.0.0",
@@ -105,7 +106,10 @@
         "eslint": "8.52.0",
         "eslint-config-next": "13.5.6",
         "eslint-config-prettier": "9.0.0",
+        "eslint-plugin-import": "2.29.0",
         "eslint-plugin-jsdoc": "46.8.2",
+        "eslint-plugin-jsx-a11y": "6.7.1",
+        "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unused-imports": "3.0.0",
         "graphql": "16.8.1",
         "gzip-size": "6.0.0",
