--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,12 @@ env:
     CI: true
     TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     TURBO_TEAM: ${{ vars.TURBO_TEAM }}
-    VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-    VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+    VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
+    VERCEL_PROJECT_ID: ${{ vars.VERCEL_PROJECT_ID }}
     VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+    SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+    SENTRY_ORG: ${{ vars.SENTRY_ORG }}
+    SENTRY_PROJECT: ${{ vars.SENTRY_PROJECT }}
 
 jobs:
     vercel:
@@ -25,16 +28,22 @@ jobs:
               uses: actions/checkout@v4
               with:
                   ref: ${{ github.event.workflow_run.head_branch }}
+                  fetch-depth: 0
 
             - name: 🚀 Bootstrap
               uses: ./.github/common/bootstrap
 
-            #- name: 📐 Install & Configure Vercel CLI
-            #  run: |
-            #      npx vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }}
+            - name: 📐 Install & Configure Vercel CLI
+              run: |
+                  npx vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }}
 
             #- name: 🚚 Push to Vercel
             #  run: npx vercel deploy --prod --archive=tgz --token=${{ secrets.VERCEL_TOKEN }}
+
+            - name: 🐛 Sentry
+              uses: getsentry/action-release@v1
+              with:
+                  environment: production
 
             - name: 🔥 Purge CloudFlare cache
               run: |
