--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -6,10 +6,11 @@ on:
             - CI
         types:
             - completed
-    # push:
-    #     branches:
-    #         - master
-    # workflow_dispatch:
+    push:
+        branches:
+            - master
+            - staging
+    workflow_dispatch:
 
 defaults:
     run:
