--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -1,11 +1,7 @@
 name: Bundle Analysis
 
 on:
-    workflow_run:
-        workflows:
-            - CI
-        types:
-            - completed
+    pull_request:
     push:
         branches:
             - master
