--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
     "$schema": "https://json.schemastore.org/eslintrc.json",
-    "extends": ["next/core-web-vitals", "prettier", "plugin:jsx-a11y/recommended"],
-    "plugins": ["unused-imports", "import", "eslint-plugin-jsdoc", "@typescript-eslint", "jsx-a11y", "prettier"],
+    "extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended", "prettier"],
+    "plugins": ["@typescript-eslint", "eslint-plugin-jsdoc", "import", "jsx-a11y", "prettier", "unused-imports"],
     "rules": {
         "@typescript-eslint/consistent-type-imports": "error",
         "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
         "consistent-return": "error",
         "import/first": "off",
+        "import/order": "off",
         "indent": "off",
         "jsdoc/check-types": "error",
         "jsdoc/require-hyphen-before-param-description": "error",
