--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,6 @@
     "files.eol": "\n",
     "files.trimFinalNewlines": false,
     "git.enableCommitSigning": true,
-    "git.mergeEditor": false
+    "git.mergeEditor": false,
+    "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"]
 }
