--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -19,7 +19,7 @@
 
             // i18n
             "@/i18n/*": ["./src/locales/*"],
-            "@/i18n/dictionarie": ["./src/app/[locale]/dictionarie.ts"],
+            "@/i18n/dictionarie": ["./src/app/(store)/[locale]/dictionarie.ts"],
 
             // Prismic
             "@/slices/*": ["./src/slices/*"],
