--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
     "files.trimFinalNewlines": false,
     "git.enableCommitSigning": true,
     "git.mergeEditor": false,
-    "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"]
+    "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"],
+    "cSpell.words": ["Prismic"]
 }
