ProductPage: Resolve FRO-10 🥳.
This also comes with a slight restructure to the prismic slices and a
bunch of work on unrelated components/things that really shouldn't be in
this commit but they are because of time constraints. So let's just
cut me some slack this time :^)

--- a/apps/web/slicemachine.config.json
+++ b/apps/web/slicemachine.config.json
@@ -1,6 +1,13 @@
 {
-    "adapter": "@slicemachine/adapter-next",
-    "libraries": ["./src/slices"],
+    "adapter": {
+        "resolve": "@slicemachine/adapter-next",
+        "options": {
+            "format": true,
+            "lazyLoadSlices": false,
+            "typescript": true
+        }
+    },
+    "libraries": ["./src/slices/common", "./src/slices/navigation"],
     "localSliceSimulatorURL": "http://localhost:3000/slice-simulator",
     "repositoryName": "candy-by-sweden"
 }
