SEO: Fix FRO-61.
Favicon and other icons should now be visible, how ever in the future
we need to do as described in FRO-62.

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ coverage/
 next.lock/
 out/
 dist/
-public/sitemap*.xml*
-public/robots.txt*
+*/public/sitemap*.xml*
+*/public/robots.txt*
 
 # production
 build/
