Everywhere: Fix multiple issues and add features.
Yes, this should've been like 10-20 PRs...

Fixes FRO-60, Resolves FRO-47, Resolves FRO-8.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,5 @@
     "git.enableCommitSigning": true,
     "git.mergeEditor": false,
     "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"],
-    "cSpell.words": ["Nordcom", "Prismic"]
+    "cSpell.words": ["HSTS", "Nordcom", "Prismic"]
 }
