--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,7 +18,7 @@
             "@/style/*": ["./src/scss/*"],
             // i18n
             "@/i18n/*": ["./src/locales/*"],
-            "@/i18n/dictionary": ["./src/app/(store)/[locale]/dictionary.ts"],
+            "@/i18n/dictionary": ["./src/app/[locale]/dictionary.ts"],
             // Prismic
             "@/slices/*": ["./src/slices/*"],
             "@/slices": ["./src/slices/index"],
