--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,12 @@ coverage/
 next.lock/
 out/
 dist/
-*/public/sitemap*.xml*
-*/public/robots.txt*
 
 # production
 build/
 .env.local
+apps/**/public/sitemap*.xml*
+apps/**/public/robots.txt*
 
 # misc
 .DS_Store
