--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,27 @@
     "git.enableCommitSigning": true,
     "git.mergeEditor": false,
     "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"],
-    "cSpell.words": ["HSTS", "Nordcom", "Prismic"]
+    "cSpell.words": [
+        "Nordcom",
+        "Filiph",
+        "Siitam",
+        "Sandström",
+        "Sahlin",
+        "Albin",
+        "Dahlqvist",
+        "Bergsgatan",
+        "Deca",
+        "destyle",
+        "ecommerce",
+        "Götaland",
+        "HSTS",
+        "lastmod",
+        "Lexend",
+        "Mellerud",
+        "nextjs",
+        "prismic",
+        "Prismic",
+        "prismicio",
+        "Västra"
+    ]
 }
