--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.4.0",
         "@prismicio/react": "2.7.3",
+        "@sentry/nextjs": "7.80.0",
         "@shopify/hydrogen-react": "2023.10.0",
         "@thebeyondgroup/shopify-rich-text-renderer": "1.0.0",
         "@vercel/edge-config": "0.4.1",
