Middleware: Extract common validations from `middleware.ts`.
We also properly test those validations now too.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,6 +10,7 @@
         "baseUrl": ".",
         "rootDir": "../../",
         "paths": {
+            "@/middleware/*": ["./src/middleware/*"],
             "@/components/*": ["./src/components/*"],
             "@/hooks/*": ["./src/hooks/*"],
             "@/api/*": ["./src/api/*"],
