Meta: Unify styling alias.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,7 +16,7 @@
             "@/api/*": ["src/api/*"],
             "@/models/*": ["src/models/*"],
             "@/utils/*": ["src/utils/*"],
-            "@/style/*": ["src/scss/*"],
+            "@/styles/*": ["src/scss/*"],
 
             // i18n
             "@/i18n/*": ["src/locales/*"],
