--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
         "color": "4.2.3",
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
+        "geist": "1.1.0",
         "next": "14.0.2",
         "next-nprogress-bar": "2.1.2",
         "next-seo": "6.4.0",
