CI: Remove lint-staged.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -44,6 +44,6 @@
         "src/@types",
         "src/**/*.ts",
         "src/**/*.tsx",
-        "src/locales/**/*.json"
+        "src/**/*.json"
     ]
 }
